<resources>
    <string name="app_name">Simple Contact</string>
    <string name="action_settings">Settings</string>

    <string name="msg_first_name">First Name</string>
    <string name="msg_last_name">Last Name</string>
    <string name="msg_age">Age</string>
    <string name="msg_url_photo">URL Photo</string>
    <string name="msg_is_required">must be filled in</string>
    <string name="msg_must_larger">must be larger than or equal to 1</string>
    <string name="msg_confirm_delete">Are you sure delete this contact ?</string>

    <string name="action_add_contact">Add Contact</string>
    <string name="action_edit_contact">Edit Contact</string>
    <string name="action_update_contact">Update Contact</string>
    <string name="action_delete_contact">Delete Contact</string>
    <string name="action_yes">Yes</string>
    <string name="action_no">No</string>
</resources>
